--- a/my-app/src/scss/_variables.scss
+++ b/my-app/src/scss/_variables.scss
@@ -1,11 +1,23 @@
-$primary-color: #272727;
-$primary-color-variant: #ff652f;
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;   
+}
+
+$color-bg: #1f1f38;
+$color-bg-variant: #2c2c6c;
 $color-white: #fff;
 $color-light: rgba(255, 255, 255, 0.6);
 $color-primary:  #4db5ff;
 $color-primary-variant: rgba(77,181, 255, 0.4);
 
+$transition: all 400ms ease;
+
 //Media Query
 $container-width-lg: 75%;
 $container-width-md: 86%;
-$container-width-sm:90%;
+$container-width-sm: 90%;
