--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -1,8 +1,8 @@
 @import '../../scss/_variables';
 
-.header {
+header {
     height: 100vh;
-    padding-top: 7rem;
+    padding-top: .5rem;
     overflow: hidden;
 
     &__container {
@@ -28,29 +28,24 @@
         }
     }
 }
+.header__container {
+    text-align: center;
+    position: relative;
+}
 
 .me {
     display: flex;
     justify-content: center;
     background: linear-gradient($color-primary, transparent);
     width: 22rem;
-    height: 30rem;
+    height: 28rem;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    margin-top: 4rem;
+    margin-top: 3rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 5rem 4rem 5rem;
-}
-
-.scroll__down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 5rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: .9rem;
 }
 
 .cta {
