--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -1,7 +1,13 @@
 @import './scss/_variables';
 
+html, body{
+    height:100%;
+}
+
+
 html {
     scroll-behavior: smooth;
+    height: 100%;
 }
 
 body {
@@ -18,6 +24,7 @@ body {
 
 .container {
     width: $container-width-lg;
+    min-height: 100vh;
     margin: 0 auto;
 }
 
@@ -33,8 +40,13 @@ h1 {
     font-size: 2.5rem;
 }
 
+h5 {
+    font-size: 1rem;
+}
+
 section {
     margin-top: 8rem;
+    height: 100vh;
 }
 
 
@@ -44,6 +56,21 @@ a {
 
     &:hover {
         color: $color-white;
+    }
+}
+
+.copyright {
+    width: 100%;
+    padding: 2rem 0 0;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+  
+    p {
+      text-transform: uppercase;
+      color: var(--black-color);
     }
 }
 
