--- a/my-app/src/scss/_variables.scss
+++ b/my-app/src/scss/_variables.scss
@@ -15,7 +15,7 @@ $color-light: rgba(255, 255, 255, 0.6);
 $color-primary:  #4db5ff;
 $color-primary-variant: rgba(77,181, 255, 0.4);
 
-$transition: all 400ms ease;
+$transition: all 0.3s ease-in-out;
 
 //Media Query
 $container-width-lg: 75%;
