Update css of the header & Implement Experience components

--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -12,14 +12,17 @@ html {
 
 body {
     font-family: sans-serif;
-    background: $color-bg;
-    color: $color-white;
+    //background: $color-bg;
+    background: #f4f4f7;
+    //color: $color-white;
+    color: $color-black;
     list-style: 1.7;
 
 }
 
 .text-light {
-    color: $color-light;
+    //color: $color-light;
+    color: $color-black-variant;
 }
 
 .container {
