--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -1,48 +1,57 @@
 @import '../../scss/_variables';
 
-header {
-    height: 100vh;
-    padding-top: .5rem;
-    overflow: hidden;
-
-    &__container {
-        text-align: center;
-        height: 100%;
-        position: relative;
-    }
-
-    &__socials {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: .8rem;
-        position: absolute;
-        left: 0;
-        bottom: 3rem;
-
-        &::after {
-            content: '';
-            width: .0625rem;
-            height: 2rem;
-            background: $color-primary;
-        }
-    }
-}
-.header__container {
+.header__container#header {
     text-align: center;
     position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background: linear-gradient(180deg,rgba(112,93,80,.8) 0,rgba(112,93,80,.8) 90%),url(../../assets/headerImage.jpeg) 50% no-repeat;
+        background-size: cover;
+        z-index: -1;
+    }
+
+    & h5 {
+        font-size: 2rem;
+        font-family:Arial, Helvetica, sans-serif;
+        font-weight: 400;
+        color: white;
+
+    }
+
+    & h1 {
+        font-size: 4.5rem;
+        font-family:Arial, Helvetica, sans-serif;
+        font-weight: 400;
+        color: white;
+    }
+
+    & hr {
+        width: 3.25rem;
+        height: 0;
+        margin-top: 1.5rem;
+        margin-bottom: .4rem;
+        border: none;
+        border-top: .2rem solid #f4623a;
+        opacity: 1;
+    }
 }
 
 .me {
     display: flex;
     justify-content: center;
-    background: linear-gradient($color-primary, transparent);
+    background: linear-gradient($color-primary, #80caff);
     width: 22rem;
     height: 28rem;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 3rem;
+    //position: absolute;
+    //left: 50%;
+    //transform: translateX(-50%);
+    margin-top: 1rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 5rem 4rem 5rem;
@@ -54,6 +63,14 @@ header {
     gap: 1.2rem;
     justify-content: center;
 
+}
+
+.container {
+    &.header__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 @media screen and (max-width: 1024px) {
