--- a/my-app/src/scss/_variables.scss
+++ b/my-app/src/scss/_variables.scss
@@ -11,9 +11,13 @@
 $color-bg: #1f1f38;
 $color-bg-variant: #2c2c6c;
 $color-white: #fff;
+$color-black: rgb(17, 4, 4);
 $color-light: rgba(255, 255, 255, 0.6);
+$color-black-variant: rgb(32, 13, 13);
 $color-primary:  #4db5ff;
 $color-primary-variant: rgba(77,181, 255, 0.4);
+$color-background-variant: #f9f9f9;
+
 
 $transition: all 0.3s ease-in-out;
 
