--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -58,7 +58,7 @@ a {
     transition: $transition;
 
     &:hover {
-        color: $color-white;
+        color: $color-primary-variant;
     }
 }
 
