--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -48,13 +48,15 @@
     background: linear-gradient($color-primary, #80caff);
     width: 22rem;
     height: 28rem;
-    //position: absolute;
-    //left: 50%;
-    //transform: translateX(-50%);
     margin-top: 1rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 5rem 4rem 5rem;
+
+    @media screen and (max-width: 300px) {
+        width: 100%;
+    }
+
 }
 
 .cta {
