--- a/my-app/src/components/project/project.scss
+++ b/my-app/src/components/project/project.scss
@@ -53,7 +53,7 @@
     align-items: center;
     height: fit-content;
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
 
     h2 {
       font-size: 1rem;
@@ -62,12 +62,13 @@
 
   &__content {
     display: flex;
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
+    align-items: center;
     height: auto;
 
     &--right {
       flex: 4;
-      padding: 1rem;
+      padding: 0 1rem 1rem 1rem;
       height: 100%;
       display: flex;
       align-items: flex-start;
@@ -87,12 +88,18 @@
           background-color: rgb(245, 179, 155);
           display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: flex-start;
 
           img {
             width: 1.5625rem;
           }
         }
+
+        ul {
+            padding-top: .25rem;
+            list-style-type: circle;
+        }
+
         p {
           font-size: 13px;
         }
