Revert padding between item__header and item__content

--- a/my-app/src/components/project/project.scss
+++ b/my-app/src/components/project/project.scss
@@ -62,7 +62,7 @@
 
   &__content {
     display: flex;
-    padding: 0 1rem 1rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     align-items: center;
     height: auto;
 
