Chagnge the wording of projects component & css changes

--- a/my-app/src/components/nav/nav.scss
+++ b/my-app/src/components/nav/nav.scss
@@ -7,9 +7,9 @@ nav {
     padding: .7rem 1.7rem;
     z-index: 2;
     position: fixed;
-    left: 50;
-    transform: translateX(-50);
-    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 1rem;
     display: flex;
     gap: .8rem;
     border-radius: 3rem;
