--- a/my-app/src/components/project/project.scss
+++ b/my-app/src/components/project/project.scss
@@ -7,7 +7,7 @@
   //background-color: $color-primary-variant;
 
   display: flex;
-  align-items: center;
+  //align-items: center;
   justify-content: center;
   position: relative;
 }
