--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -46,8 +46,8 @@
     display: flex;
     justify-content: center;
     background: linear-gradient($color-primary, #80caff);
-    width: 22rem;
-    height: 28rem;
+    width: 17rem;
+    height: 24rem;
     margin-top: 1rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
@@ -72,6 +72,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 3rem;
     }
 }
 
