--- a/my-app/src/components/work/work.scss
+++ b/my-app/src/components/work/work.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     background-color: crimson;
     width: 100%;
-    padding: 3rem 0rem;
+    padding-bottom: 3rem;
 
   .slider {
     height: 100%;
