--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -1,13 +1,14 @@
 @import './scss/_variables';
 
 html, body{
-    height:100%;
+    min-height:100%;
+    width: 100%;
 }
 
 
 html {
     scroll-behavior: smooth;
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
