--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -19,7 +19,7 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
-  padding: 3rem 2rem;
+  padding: 3rem 2rem 0rem 2rem;
 
   @media screen and (max-width: 450px) {
     padding: 4rem 1rem 2rem;
@@ -49,6 +49,7 @@
   position: relative;
   top: 77vh;
   padding: 1rem;
+  height: fit-content;
 
   div {
     width: 40px;
