--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -28,7 +28,7 @@ body {
 
 .container {
     width: $container-width-lg;
-    min-height: 100vh;
+    //min-height: 100vh;
     margin: 0 auto;
 }
 
@@ -50,7 +50,7 @@ h5 {
 
 section {
     margin-top: 8rem;
-    height: 100vh;
+    height: 77vh;
 }
 
 
