Make color consistent & Update media links

--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -59,7 +59,7 @@ a {
     transition: $transition;
 
     &:hover {
-        color: $color-primary-variant;
+        color: $color-bg-variant;
     }
 }
 
