--- a/my-app/src/scss/_variables.scss
+++ b/my-app/src/scss/_variables.scss
@@ -16,6 +16,7 @@ $color-light: rgba(255, 255, 255, 0.6);
 $color-black-variant: rgb(32, 13, 13);
 $color-primary:  #4db5ff;
 $color-primary-variant: rgba(77,181, 255, 0.4);
+$color-primary-varian2: #2c9cec;
 $color-background-variant: #f9f9f9;
 
 
