--- a/my-app/src/components/contact/contact.scss
+++ b/my-app/src/components/contact/contact.scss
@@ -25,7 +25,7 @@
 }
 
 .contact__option {
-    background: $color-bg-variant;
+    background: $color-primary-varian2;
     padding: 1.2rem;
     border-radius: 1.2rem;
     text-align: center;
