--- a/my-app/src/components/project/project.scss
+++ b/my-app/src/components/project/project.scss
@@ -41,13 +41,13 @@
 }
 
 .item {
-  height: 100%;
+  min-height: fit-content;
   width: 100%;
   background-color: #fff;
   border-radius: 1.25rem;
   display: flex;
   flex-direction: column;
-  background: #eaedee;
+  background: $color-primary-variant;
   margin-top: 2rem;
 
   &__header {
@@ -146,7 +146,7 @@
     &-description {
       display: flex;
       align-items: center;
-      padding: 0.75rem;
+      padding: 0.5rem;
     }
 
     &--label {
