Implement css changes according to the figma

--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -1,14 +1,15 @@
+@import "../../scss/_variables";
+
 .about {
     display: flex;
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
+    margin: 3rem auto;
 
     &__container {
         min-height: fit-content;
-        //display: flex;
-        //flex-direction: column;
     }
 
     &__header {
@@ -31,14 +32,12 @@
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
-        //width: 50%;
+        font-size: 12px;
 
         &--info {
             display: flex;
-            //flex: 50%;
             margin-bottom: 2rem;
             width: 100%;
-            //margin: 0 auto;
 
             svg {
                 min-height: 100%;
@@ -53,6 +52,14 @@
         &--right {
             width: 50%;
         }
+
+        @include media(mobile){
+            font-size: 1rem
+        }
+
+        @include media(tablet){
+            font-size: 1.25rem
+        }
     }
 
     &__icon {
@@ -65,7 +72,7 @@
         flex-direction: column;
 
         &--value {
-            @media screen and (max-width: 600px) {
+            @media screen and (max-width: 1024px) {
                 word-break: break-all;
             }
         }
