--- a/my-app/src/components/nav/nav.scss
+++ b/my-app/src/components/nav/nav.scss
@@ -21,25 +21,25 @@
         align-items: center;
   
         .logo {
-          font-size: 2.5rem;
+          font-size: 1.5rem;
           font-weight: 700;
           text-decoration: none;
           color: inherit;
           margin-right: 2.5rem;
 
-          @include mobile{
+          @include media(tabet){
             font-size: 2rem;
           } 
 
         }
   
         .itemContainer {
-          display: flex;
           align-items: center;
           margin-left: 1.875rem;
+          display: none;
   
-          @include mobile{
-            display: none;
+          @include media(tablet){
+            display: flex;
           }
 
           a {
