--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background: #f4f4f7;
     color: $color-black;
     list-style: 1.7;
