--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -10,6 +10,8 @@
 
     &__container {
         min-height: fit-content;
+        font-family: Arial, Helvetica, sans-serif;
+        //background-color: b;
     }
 
     &__header {
@@ -18,6 +20,10 @@
         font-weight: 400;
         font-size: 3rem;
         line-height: 1.5;
+
+        @include media(desktop){
+            font-size: 6rem;
+        }
 
         &--info {
             color: #000;
@@ -59,6 +65,10 @@
 
         @include media(tablet){
             font-size: 1.25rem
+        }
+
+        @include media(desktop){
+            font-size: 1.5rem;
         }
     }
 
