--- a/my-app/src/components/home/home.scss
+++ b/my-app/src/components/home/home.scss
@@ -22,6 +22,9 @@
         font-weight: 400;
         color: white;
 
+        @include media(desktop){
+            font-size: 3.5rem;
+        }
     }
 
     & h1 {
@@ -29,6 +32,10 @@
         font-family:Arial, Helvetica, sans-serif;
         font-weight: 400;
         color: white;
+
+        @include media(desktop){
+            font-size: 6.5rem;
+        }
     }
 
     & hr {
@@ -57,6 +64,10 @@
         width: 100%;
     }
 
+    @include media(desktop){
+        width: 22rem;
+        height: 27rem;
+    }
 }
 
 .cta {
