--- a/my-app/src/components/project/project.scss
+++ b/my-app/src/components/project/project.scss
@@ -81,11 +81,11 @@
         flex-direction: column;
         justify-content: space-between;
 
+        @include media(desktop){
+          justify-content: center;
+        }
+
         .imgContainer {
-          width: 2.5rem;
-          height: 2.5rem;
-          border-radius: 50%;
-          background-color: rgb(245, 179, 155);
           display: flex;
           align-items: center;
           justify-content: flex-start;
@@ -99,6 +99,10 @@
         ul {
           display: list-item;
           padding-top: .25rem;
+
+          @include media(desktop){
+            font-size: 1.5rem;
+          }
         }
         li {
           list-style-type: circle;
@@ -108,7 +112,7 @@
         p {
           font-size: 13px;
         }
-        span {
+        h3 {
           font-size: 2rem;
           font-weight: 600;
           text-decoration: underline;
@@ -118,7 +122,7 @@
     }
 
     &--left {
-      flex: 8;
+      flex: 6;
       height: 100%;
       display: flex;
       align-items: center;
