--- a/my-app/src/components/work/work.scss
+++ b/my-app/src/components/work/work.scss
@@ -4,6 +4,7 @@
     position: relative;
     height: auto;
     display: flex;
+    border-radius: 1.25rem;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -29,6 +30,10 @@
       font-weight: 400;
       line-height: 1.5;
       margin-bottom: 1rem;
+
+      @include media(desktop){
+        font-size: 5rem;
+      }
   }
 
   .arrow {
@@ -51,7 +56,8 @@
   display: flex;
   position: relative;
   justify-content: center;
-  background: antiquewhite;
+  //background: antiquewhite;
+  //background: black;
 }
 
 .slide {
@@ -77,13 +83,12 @@
       flex-direction: column;
 
       .imgContainer {
-        width: 100px;
-        height: 40px;
+        //width: 100px;
+        //height: 40px;
         border-radius: 50%;
-        background-color: rgb(245, 179, 155);
         display: flex;
         align-items: center;
-        justify-content: center;
+        //justify-content: center;
 
         img {
           width: 25px;
@@ -109,6 +114,10 @@
         text-decoration: underline;
         cursor: pointer;
       }
+    }
+
+    @include media(desktop){
+      font-size: 1.5rem;
     }
   }
 
