Update media queries

--- a/my-app/src/components/project/project.scss
+++ b/my-app/src/components/project/project.scss
@@ -99,7 +99,7 @@
           display: list-item;
           padding-top: .25rem;
 
-          @include media(desktop){
+          @media (min-width: 1024px)  and (min-height: 830px) {
             font-size: 1.5rem;
           }
         }
