--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -67,9 +67,11 @@
             font-size: 1.25rem
         }
 
-        @include media(desktop){
+        @media (min-width: 1024px)  and (min-height: 1100px) {
             font-size: 1.5rem;
         }
+
+    
     }
 
     &__icon {
