--- a/my-app/src/components/contact/contact.scss
+++ b/my-app/src/components/contact/contact.scss
@@ -8,7 +8,7 @@
     h2 {
         text-align: center;
 
-        @include media(desktop){
+        @media (min-width: 1024px)  and (min-height: 830px) {
             font-size: 4rem;
         }
     }
@@ -16,7 +16,7 @@
     h3 {
         text-align: center;
 
-        @include media(desktop){
+        @media (min-width: 1024px)  and (min-height: 830px) {
             font-size: 1.5rem;
         }
     }
@@ -88,7 +88,7 @@ form {
         border: 2px solid $color-primary-variant;
         resize: none;
 
-        @include media(desktop){
+        @media (min-width: 1024px)  and (min-height: 830px) {
             font-size: 1.5rem;
         }
     }
