--- a/my-app/src/components/home/home.scss
+++ b/my-app/src/components/home/home.scss
@@ -33,7 +33,7 @@
         font-weight: 400;
         color: white;
 
-        @include media(desktop){
+        @media (min-width: 1024px)  and (min-height: 830px) {
             font-size: 6.5rem;
         }
     }
@@ -64,7 +64,7 @@
         width: 100%;
     }
 
-    @include media(desktop){
+    @media (min-width: 1024px)  and (min-height: 830px) {
         width: 22rem;
         height: 27rem;
     }
@@ -89,13 +89,14 @@
 
 @media screen and (max-width: 1024px) {
     .home {
-        height: 68vh;
+        min-height: 68vh;
     }
 }
 
 @media screen and (max-width: 600px) {
     .home {
-        height: 100vh;
+        min-height: -webkit-fill-available;
+        min-height: 100vh;
     }
 
     .home__socials,
