--- a/my-app/src/components/work/work.scss
+++ b/my-app/src/components/work/work.scss
@@ -31,7 +31,7 @@
       line-height: 1.5;
       margin-bottom: 1rem;
 
-      @include media(desktop){
+      @media (min-width: 1024px)  and (min-height: 1100px) {
         font-size: 5rem;
       }
   }
@@ -116,7 +116,7 @@
       }
     }
 
-    @include media(desktop){
+    @media (min-width: 1024px)  and (min-height: 1100px) {
       font-size: 1.5rem;
     }
   }
