--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -21,9 +21,11 @@
         font-size: 3rem;
         line-height: 1.5;
 
-        @include media(desktop){
+        @media (min-width: 1024px)  and (min-height: 1100px) {
             font-size: 6rem;
         }
+
+        
 
         &--info {
             color: #000;
