--- a/my-app/src/components/home/home.scss
+++ b/my-app/src/components/home/home.scss
@@ -22,7 +22,7 @@
         font-weight: 400;
         color: white;
 
-        @media (min-width: 1024px)  and (min-height: 830px) {
+        @media screen and (min-width: 1024px) and (min-height: 830px) {
             font-size: 3.5rem;
         }
     }
@@ -33,7 +33,7 @@
         font-weight: 400;
         color: white;
 
-        @media (min-width: 1024px)  and (min-height: 830px) {
+        @media screen and (min-width: 1024px)  and (min-height: 830px) {
             font-size: 6.5rem;
         }
     }
@@ -64,7 +64,7 @@
         width: 100%;
     }
 
-    @media (min-width: 1024px)  and (min-height: 830px) {
+    @media screen and (min-width: 1024px)  and (min-height: 830px) {
         width: 22rem;
         height: 27rem;
     }
