--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -6,7 +6,6 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    margin: 3rem auto;
 
     &__container {
         min-height: fit-content;
@@ -46,6 +45,7 @@
             display: flex;
             margin-bottom: 2rem;
             width: 100%;
+            align-items: center;
 
             svg {
                 min-height: 100%;
@@ -59,21 +59,20 @@
 
         &--right {
             width: 50%;
+            line-height: 1.5rem;
         }
 
         @include media(mobile){
             font-size: 1rem
         }
 
-        @include media(tablet){
+        @include media2(tablet, desktopHeight){
             font-size: 1.25rem
         }
 
-        @media (min-width: 1024px)  and (min-height: 1100px) {
-            font-size: 1.5rem;
+        @include media2(desktop, desktopHeight){
+            font-size: 1.5rem
         }
-
-    
     }
 
     &__icon {
