Add aos & GSAP & styled-components

--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -6,33 +6,16 @@
     height: auto;
     display: flex;
     flex-direction: column;
+    border-radius: 2rem;
+    max-width: 1373px;
+    background-color: $color-background-variant;
+    box-sizing: border-box;
+    font-weight: 600;
 
     &__container {
-        min-height: fit-content;
         font-family: Arial, Helvetica, sans-serif;
-        //background-color: b;
-    }
-
-    &__header {
-        display: flex;
-        justify-content: center;
-        font-weight: 400;
-        font-size: 3rem;
-        line-height: 1.5;
-
-        @media (min-width: 1024px)  and (min-height: 1100px) {
-            font-size: 6rem;
-        }
-
-        
-
-        &--info {
-            color: #000;
-            border-bottom-color: #ccc;
-            border-bottom-width: .0625rem;
-            border-bottom-style: solid;
-            margin-bottom: 2rem;
-        }
+        //background-color: red;
+        position: relative;
     }
 
     &__content {
@@ -44,22 +27,34 @@
         &--info {
             display: flex;
             margin-bottom: 2rem;
+            background-color: rgb(57, 62, 70);
             width: 100%;
             align-items: center;
+            padding: 0.8rem 2rem;
+            border-radius: 2rem;
+            border: 0.5rem solid rgb(238, 238, 238);
+            cursor: pointer;
+
 
             svg {
                 min-height: 100%;
                 width: 100%;
             }
+
+            &:hover {
+                background-color: rgb(0, 173, 181);
+                //border-color: var(--secondary-color);
+            }
         }
 
         &--left {
             width: 50%;
+            padding: 1rem;
         }
 
         &--right {
             width: 50%;
-            line-height: 1.5rem;
+            padding: 1rem;
         }
 
         @include media(mobile){
@@ -78,11 +73,14 @@
     &__icon {
         width: 3rem;
         height: 3rem;
+        color: $color-white;
+        margin-right: 1rem;
     }
 
     &__field {
         display: flex;
         flex-direction: column;
+        color: $color-white;
 
         &--value {
             @media screen and (max-width: 1024px) {
