--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -13,7 +13,7 @@ html {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #f4f4f7;
+    background-color: rgb(34, 40, 49);
     color: $color-black;
     list-style: 1.7;
 
