--- a/my-app/src/components/home/home.scss
+++ b/my-app/src/components/home/home.scss
@@ -4,6 +4,7 @@
     text-align: center;
     position: relative;
 
+    /*
     &::before {
         content: '';
         position: absolute;
@@ -15,7 +16,7 @@
         background-size: cover;
         z-index: -1;
     }
-
+    */
     & h5 {
         font-size: 2rem;
         font-family:Arial, Helvetica, sans-serif;
