--- a/my-app/src/components/work/work.scss
+++ b/my-app/src/components/work/work.scss
@@ -32,7 +32,7 @@
       margin-bottom: 1rem;
 
 
-      @include media2(desktop, desktopHeight){
+      @include media(desktop, desktopHeight){
         font-size: 5rem;
       }
   }
@@ -118,7 +118,7 @@
       }
     }
 
-    @include media2(desktop, desktopHeight){
+    @include media(desktop, desktopHeight){
       font-size: 1.5rem;
     }
   }
@@ -139,7 +139,7 @@
       margin-bottom: .25rem;
     }
 
-    @include media2(desktop, desktopHeight){
+    @include media(desktop, desktopHeight){
       height: 18.75rem;
     }
   }
