--- a/my-app/src/components/footer/footer.scss
+++ b/my-app/src/components/footer/footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
     &__container {
-        background: #222;
+        //background: #222;
         min-height: 100px;
         text-align: center;
         color: $color-white;        
