--- a/my-app/src/components/contact/contact.scss
+++ b/my-app/src/components/contact/contact.scss
@@ -4,6 +4,7 @@
     margin-top: 3rem;
     width: 100%;
     height: fit-content;
+    background: $color-background-variant;
     
     h2 {
         text-align: center;
