--- a/my-app/src/components/contact/contact.scss
+++ b/my-app/src/components/contact/contact.scss
@@ -50,7 +50,7 @@
 }
 
 .contact__option {
-    background: $color-primary-varian2;
+    background: $color-primary;
     padding: 1.2rem;
     border-radius: 1.2rem;
     text-align: center;
