--- a/my-app/src/components/work/work.scss
+++ b/my-app/src/components/work/work.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $color-primary;
+    background-color: $color-background-variant;
     width: 100%;
     padding-bottom: 3rem;
     margin-top: 1rem;
