Make slight change to the mobile views

--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -55,6 +55,7 @@
         &--right {
             width: 50%;
             padding: 1rem;
+            overflow: scroll;
         }
 
         @include media(mobile){
