--- a/my-app/src/components/about/about.scss
+++ b/my-app/src/components/about/about.scss
@@ -55,7 +55,7 @@
         &--right {
             width: 50%;
             padding: 1rem;
-            overflow: scroll;
+            overflow: auto;
         }
 
         @include media(mobile){
