--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,5 +1,16 @@
 @import "./scss/_variables";
 
+.app {
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .app__container {
   width: 100%;
   min-height: 100vh;
